--- a/views/about.html
+++ b/views/about.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -23,7 +22,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <span class="navbar-brand" href="#">WEB322 - Assignment Template</span>
+          <span class="navbar-brand" href="#">WEB322 - Nancy Wobo</span>
         </div>
     
         <!-- Collect the nav links, forms, and other content for toggling -->
