--- a/views/posts.hbs
+++ b/views/posts.hbs
@@ -24,6 +24,7 @@
                         <td>{{#formatDate postDate}}{{/formatDate}}</td>
                         <td><a href="/posts?category={{category}}">{{category}}</a></td>
                         <td>{{published}}</td>
+                         <td><a href="/posts/delete/{{id}}" class="btn btn-danger">remove</a></td> <!-- "remove" link -->
                     </tr>
                 {{/each}}
                </tbody>
